--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Simple FPS</title>
+    <title>Simple FPS with Targets</title>
     <style>
         body {
             margin: 0;
@@ -12,10 +12,18 @@
             height: 100%;
             background-color: black;
         }
+        #score {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            color: white;
+            font-size: 20px;
+        }
     </style>
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
+    <div id="score">Score: 0</div>
     <script src="game.js"></script>
 </body>
 </html>
